SysMsg about the reddit thread.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,11 @@
-<div id="sys-message">
+<!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>D3Up V2 - Feature Preview #2</h3>
 	Over the next month or two, I'm going to be previewing features on <a href='http://reddit.com/r/d3up'>/r/d3up on reddit</a>, 
 	with #2 being shown off today! <a href='http://www.reddit.com/r/d3up/comments/1brecl/new_feature_2_build_comparisons_in_d3upcom_v2/'>Build Comparisons</a> is going to be a new way to compare your build with another to see what makes each build tick.
+	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
+</div> -->
+<div id="sys-message">
+	<h3 style='margin: 0; color: #0d0'>D3Up V2 - Feedback Requested</h3>
+	With V2 heavily in development, I'd like to collect some feedback about things you like and things you think are a pain about V1 of the site. I've <a href="http://www.reddit.com/r/Diablo/comments/1cxsby/what_is_your_workflowprocess_on_d3upcom_feedback/">started a post on reddit</a> to collect feedback about what would make your life easier while using D3Up.
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div>
