Updated system message.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -4,8 +4,13 @@
 	with #2 being shown off today! <a href='http://www.reddit.com/r/d3up/comments/1brecl/new_feature_2_build_comparisons_in_d3upcom_v2/'>Build Comparisons</a> is going to be a new way to compare your build with another to see what makes each build tick.
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div> -->
-<div id="sys-message">
+<!-- <div id="sys-message">
 	<h3 style='margin: 0; color: #0d0'>D3Up V2 - Feedback Requested</h3>
 	With V2 heavily in development, I'd like to collect some feedback about things you like and things you think are a pain about V1 of the site. I've <a href="http://www.reddit.com/r/Diablo/comments/1cxsby/what_is_your_workflowprocess_on_d3upcom_feedback/">started a post on reddit</a> to collect feedback about what would make your life easier while using D3Up.
+	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
+</div> -->
+<div id="sys-message">
+	<h3 style='margin: 0; color: #0d0'>1.0.8 Game Data is Live</h3>
+	I've updated all the skill information for 1.0.8, if it's not showing up on your build, clear your cache and refresh the page. Also feel free to submit ideas still for v2 on <a href="http://www.reddit.com/r/Diablo/comments/1cxsby/what_is_your_workflowprocess_on_d3upcom_feedback/">this post on reddit</a>.
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
 </div>
