--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -17,6 +17,6 @@ google_ad_height = 90;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <div class='ad-info'>
-	Why is there an ad here all of the sudden? <a href=''>Here's the explanation!</a> Also - Ads don't show for logged in users.
+	Why is there an ad here all of the sudden? <a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Here's the explanation!</a> Also - Ads don't show for logged in users.
 </div>
 <? endif ?>
