Freeze announcement and removal of user voice.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -92,9 +92,9 @@
 	<script type="text/javascript">
 	  var uvOptions = {};
 	  (function() {
-	    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
-	    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/G6QjQp0wBZ9P7m0db4HQ.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+	    // var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+	    // uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/G6QjQp0wBZ9P7m0db4HQ.js';
+	    // var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
 	  })();
 	</script>
 	<div class="d3up-tooltip"></div>
