--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,8 +1,8 @@
 <? if($this->profile): ?>
 <div id="sys-message" class='ui-helper-clearfix'>
-	<h3 style='margin: 0; color: #0d0'>Site Update, Life Update & Advertising Tests</h3>
-	Soon I'll be providing a major update regarding V2 of D3Up.com. I'm pretty excited with how it's turning out and want to share and get people involved. I've also posted <a href="http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/">an explanation of the new ads</a> which also includes a bit about how my life's changing this summer/fall.
-	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a> to report any bugs.
+	<h3 style='margin: 0; color: #0d0'>Development Stop on Version 1 of D3Up.com & Update on Ads</h3>
+	I'm freezing all changes on V1 (this version) of the site for the foreseeable future. V2 is nearing a point where it's almost ready for beta, so I want to focus my efforts and not get distracted improving V1. I also am going to maintain the ads for now. <a href="#">Read the full update here.</a>
+	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
 <? else: ?>
 <script type="text/javascript"><!--
@@ -17,6 +17,6 @@ google_ad_height = 90;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <div class='ad-info'>
-	<a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Here's why there's ads all of the sudden</a>! Login to hide them. Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here?</a> Login to hide them. Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
 <? endif ?>
