--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,7 +1,7 @@
 <? if($this->profile): ?>
 <div id="sys-message" class='ui-helper-clearfix'>
 	<h3 style='margin: 0; color: #0d0'>Development Stop on Version 1 of D3Up.com & Update on Ads</h3>
-	I'm freezing all changes on V1 (this version) of the site for the foreseeable future. V2 is nearing a point where it's almost ready for beta, so I want to focus my efforts and not get distracted improving V1. I also am going to maintain the ads for now. <a href="#">Read the full update here.</a>
+	I'm freezing all changes on V1 (this version) of the site for the foreseeable future. V2 is nearing a point where it's almost ready for beta, so I want to focus my efforts and not get distracted improving V1. I also am going to maintain the ads for now. <a href="http://www.reddit.com/r/d3up/comments/1ft51a/development_stop_on_version_1_update_on_ads/">Read the full update here.</a>
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
 <? else: ?>
@@ -17,6 +17,6 @@ google_ad_height = 90;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <div class='ad-info'>
-	<a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here?</a> Login to hide them. Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<a href="http://www.reddit.com/r/d3up/comments/1ft51a/development_stop_on_version_1_update_on_ads/">Development Freeze!</a> | <a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here?</a> Login to hide them. Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
 <? endif ?>
