--- a/application/views/scripts/index/_sidebar.phtml
+++ b/application/views/scripts/index/_sidebar.phtml
@@ -1,4 +1,8 @@
 <div class="content-page sidebar">
+	<div class='page loothunter'>
+		<a href="http://loothunter.net"><img src='/images/loothunter.png'></a>
+		<p>Looking for an upgrade or to sell a piece of your old gear? Check out <a href="http://loothunter.net">Loothunter.net</a>!</p>
+	</div>
 	<div class='page'>
 	  <h3>Most Recent Update to D3Up.com</h3>
 	  <ul>
