Ads for everyone!

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,15 +1,3 @@
-<? if($this->profile): ?>
-<!-- <div id="sys-message" class='ui-helper-clearfix'>
-	<h3 style='margin: 0; color: #0d0'>Development Stop on Version 1 of D3Up.com & Update on Ads</h3>
-	I'm freezing all changes on V1 (this version) of the site for the foreseeable future. V2 is nearing a point where it's almost ready for beta, so I want to focus my efforts and not get distracted improving V1. I also am going to maintain the ads for now. <a href="http://www.reddit.com/r/d3up/comments/1ft51a/development_stop_on_version_1_update_on_ads/">Read the full update here.</a>
-	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
-</div> -->
-<div id="sys-message" class='ui-helper-clearfix'>
-	<h3 style='margin: 0; color: #0d0'>Happy First Birthday, D3Up!</h3>
-	It's D3Up's first birthday, and to celebrate, I posted <a href="http://www.reddit.com/r/Diablo/comments/1gcu8n/d3ups_first_birthday_thanks_to_everyone_for/">a little recap of the last year</a> on <a href="http://reddit.com/r/diablo">/r/diablo</a>. Thanks to each and every one of you for using the site, reporting bugs, and helping make the site what it is today! 
-	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
-</div>
-<? else: ?>
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-2154138165823650";
 /* D3Up.com - Leaderboard */
@@ -22,8 +10,5 @@ google_ad_height = 90;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <div class='ad-info'>
-	<!-- <a href="http://www.reddit.com/r/d3up/comments/1ft51a/development_stop_on_version_1_update_on_ads/">Development Freeze!</a>  -->
-	<a href="http://www.reddit.com/r/Diablo/comments/1gcu8n/d3ups_first_birthday_thanks_to_everyone_for/">It's D3Up's 1st Birthday!</a>
-	| <a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here?</a> Login to hide them. Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+	<a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here (Updated)?</a>. Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
-<? endif ?>
