--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -10,7 +10,6 @@ google_ad_height = 90;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 <div class='ad-info'>
-	<!-- <a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here (Updated July 12th)?</a>.  -->
-	<span style="color: #f00">Build browsings disabled for a bit to allow for the excess traffic today.</span>
+	<span style="color: #0f0">Build browsing's re-enabled!</span> <a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here (Updated July 12th)?</a>. 
 	Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
