--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -91,13 +91,15 @@
 	})();
 	</script>
 	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66607061ns.gif" /></p></noscript>
-	<script type="text/javascript">
-	  var uvOptions = {};
-	  (function() {
-	    // var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
-	    // uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/G6QjQp0wBZ9P7m0db4HQ.js';
-	    // var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
-	  })();
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-48747118-1', 'd3up.com');
+	  ga('send', 'pageview');
+
 	</script>
 	<div class="d3up-tooltip"></div>
 </body>
