Crusader addition and a few fixes

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -53,6 +53,7 @@
 						<h3>By Class</h3>
 						<ul class="dropdown_links">
 							<li class='barbarian'><a href="/build?class=barbarian">Barbarian</a></li>
+              <li class='crusader'><a href="/build?class=crusader">Crusader</a></li>
 							<li class='demon-hunter'><a href="/build?class=demon-hunter">Demon Hunter</a></li>
 							<li class='monk'><a href="/build?class=monk">Monk</a></li>
 							<li class='witch-doctor'><a href="/build?class=witch-doctor">Witch Doctor</a></li>
