--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -13,7 +13,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 <!-- 	<span style="color: #0f0">Build browsing's re-enabled!</span> <a href='http://www.reddit.com/r/d3up/comments/1faauv/testing_some_ads_and_moving_out_west/'>Why is this ad here (Updated July 12th)?</a>. 
   
  -->
-    <span style="color: #0f0">Status Update regarding Loot 2.0:</span> <a href='http://www.reddit.com/r/d3up/comments/1zeo6v/status_update_for_loot_20/'>Read the Post</a>.
+    <span style="color: #f00">Progress Report on RoS D3Up:</span> <a href='http://www.reddit.com/r/d3up/comments/22yzij/d3up_ros_updates_in_progress/'>Read the Updates & Post Bugs</a>.
 
 Feel free to contact me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
